[tool.poetry]
name = "apyg"
version = "0.9.1"
description = "A text string generator with many options."
authors = ["Chuck Stearns <chuck.stearns@gmail.com>"]
readme = "README.md"
packages = [
    { include = "apyg", from = "./src" },
    { include = "apyglib", from = "./src" }
]


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
